# NEXUS

./: .gitattributes  .gitignore  ARCHITECTURE.md  BUILD_COMPLETE.md  BUILD_COMPLETE_FINAL_REPORT.md  BUILD_NEXUS.ps1  BUILD_NEXUS_PORTABLE.bat  BUILD_STATUS.md  BUILD_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo_NEXUS.toml  DEPLOYMENT-GUIDE.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_INDEX.md  FAQ.md  FULL_BUILD_COMPLETE.md  GIT-IGNORE-POLICY.txt  GITHUB_RULESET_RECOMMENDED.md  IDE_README.md  LAUNCH_NEXUS_COMPLETE.ps1  LAUNCH_NEXUS_IDE.bat  LICENSE  LICENSE-APACHE-2.0.txt  LICENSE-GPLv3.txt  MONACO-RELEASE-SUMMARY.md  MVP_WEEK1_PLAN.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  READY_TO_PUSH.md  RELEASE-STATUS.md  RELEASE-v0.1.1.md  RUN_NEXUS_QUICK.ps1  SECURITY.md  SESSION-SUMMARY.md  START_HERE.md  WEEK1_STATUS.md  (+14 more)
.archive/: 000_MARKDOWN_STYLE_GUIDE.md  000_NEXUS_PRO_MASTER_GUIDE.md  002_FAST_ROADMAP.md  004_BETTER_TECH_STACK.md  005_BUILD_LOG.md  006_TROUBLESHOOTING.md  007_STATUS_DASHBOARD.md  014_NEXUS_PRO_INTEGRATION_FRAMEWORK.md  016_QUICK_START_GUIDE.md  018_NEXUS_PRO_STRATEGY.md  BUILD_COMPLETE_FINAL_REPORT.md  BUILD_SUCCESSFUL.md  BUILD_SUMMARY.md  FULL_BUILD_COMPLETE.md  GITHUB_RULESET_RECOMMENDED.md  README.md  REPOSITORY_CONTENTS.md  SETUP_COMPLETE.md
.cargo/: config.toml
.github/workflows/: build-release.yml  build.yml  main_nexus.yml
NEXUS-IDE-v0.1.0/: README.txt
NEXUS-IDE-v0.1.0/frontend/: index.html
core/: Cargo.toml
core/src/: analyzer.rs  editor.rs  lib.rs  lsp.rs  main.rs  ollama_client.rs  plugins.rs  test_debugger.rs  text_engine.rs  utils.rs  vfs.rs
core/src/archive/: auto_test.rs.broken  test_debugger_bin.rs.broken
docs/: .markdownlint.json  00-INDEX.md  00-README.md  001_START_HERE.md  003_PRO_VERSION.md  008_TEST_DEBUGGER.md  01-GETTING-STARTED.md  01-QUICK_START.md  010_FRAMEWORK_ANALYSIS.md  011_COMPREHENSIVE_PLAN.md  012_IDE_IMPLEMENTATION_PLAN_V2.md  013_BUILD_STATUS.md  013_NEXUS_PRO_BUSINESS_STRATEGY_V2.md  015_TRANSFORMATION_SUMMARY.md  017_ONBOARDING_GUIDE.md  018_NEXUS_PRO_STRATEGY.md  01_BUILD_STATUS.md  02-ARCHITECTURE.md  02_DEVELOPMENT.md  03-BUILD.md  03_BUILD_GUIDE.md  04-TROUBLESHOOTING.md  04_GITHUB_RULESETS.md  05-AVG-ANTIVIRUS-FIX.md  05-FEATURES.md  06-CONTRIBUTING.md  07-BUILD-STATUS.md  07-CHANGELOG.md  08-BUILD-SUMMARY.md  08-ROADMAP.md  09-GITHUB-ACTIONS.md  09-IDE-LAUNCHER.md  10-BUILD-PROGRESS.md  10-RELEASE-v0.1.1.md  11-FIXES-v0.1.1.md  11-TEST-REPORT.md  12-FRAMEWORKS-RESEARCH.md  13-EDITOR-COMPARISON.md  14-MONACO-INTEGRATION.md  IDE_ANALYSIS.md  (+3 more)
docs/archive/: .markdownlint.json.bak  ARCHIVE_INDEX.md  CONSOLIDATION_COMPLETE.md  DELIVERY_CHECKLIST.md  DELIVERY_COMPLETE.txt  FILE_MANIFEST.txt  GIT_PUSH_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_ROADMAP.md  INDEX.md  MARKDOWN_STYLE_GUIDE.md  MASTER_INDEX.md  NEXT_STEPS.md  NEXUS_ARCHITECTURE_DIAGRAM.txt  NEXUS_EXECUTION_SUMMARY.md  NEXUS_FINAL_STATUS.md  NEXUS_IDE_DELIVERY_SUMMARY.txt  NEXUS_IDE_SPEC.md  NEXUS_IMPLEMENTATION_LOG.md  NEXUS_INDEX.md  NEXUS_MANIFEST.md  NEXUS_PORTABLE_EXE_SETUP.md  NEXUS_PROJECT_COMPLETION.md  NEXUS_QUICK_START.md  NEXUS_USAGE_GUIDE.md  NEXUS_WINDOWS_SETUP.md  OLLAMA_IMPLEMENTATION_CHECKLIST.md  OPEN_ME_FIRST.txt  PREFLIGHT_CHECK_REPORT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_MANIFEST.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_NEXUS_IDE.txt  START_HERE.md  WEEK1_STATUS.md  ZENITH_OLLAMA_SUMMARY.md  architecture.md  contributing.md
frameworks/: COMPLETION_SUMMARY.md  FRAMEWORKS_INDEX.md  IDE_DECISION_MATRIX.md  INDEX.md  README.md
frameworks/android-studio/: TUTORIAL.md
scripts/: bump-version.ps1  nexus-ide.html  run-ide.ps1
src/: App.svelte  app.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: create_icon.ps1  create_icons.py
src-tauri/src/: commands.rs  editor.rs  lib.rs  lsp.rs  main.rs  ollama.rs
test-samples/: bash.sh  css.css  html.html  javascript.js  json.json  markdown.md  python.py  rust.rs  typescript.ts
ui/: electron-main.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
(+40 files in other folders)
