[package]
name = "nexus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Text processing
ropey = "1.6"  # Efficient rope-based text buffer
tree-sitter = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-rust = "0.20"

# LSP
lsp-server = "0.7"
lsp-types.workspace = true

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# File watching
notify = "6.1"

# Performance
parking_lot = "0.12"
crossbeam = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
dashmap = "5.5"

[dev-dependencies]
criterion.workspace = true
tempfile = "3.8"
