[package]
name = "nexus-pro"
version = "0.0.1"
description = "The fastest IDE on earth with native AI"
authors = ["NEXUS Pro Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open", "window-all"] }
tokio = { version = "1.35", features = ["full"] }
ropey = "1.6"
tree-sitter = "0.20"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-json = "0.20"
tower-lsp = "0.20"
crossbeam = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

[dev-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "nexus-pro"
path = "src/main.rs"
