[package]
name = "nexus-pro"
version = "0.0.1"
description = "The fastest IDE on earth with native AI"
authors = ["NEXUS Pro Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "0.1"
tokio = { version = "1", features = ["full"] }
ropey = "1.6"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "nexus-pro"
path = "src/main.rs"
